kubernetes/apps/rook-ceph/rook-ceph-operator/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rook-ceph-egress-kube-apiserver
  namespace: _
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
        - cluster
    - toEndpoints:
        - {}
